# Care

./: .gitignore  11-AI-利安人寿-基于大模型保险文档精准召回系统 (1) (1).doc  DATASET_README.md  RUNBOOK.md  feedback_seed.csv  intent_dataset_zh_insurance_v1.jsonl  project_overview.txt
freshrank/: README.md  __init__.py  dify_tool_config.json  openapi.json  postman_collection.json  pyproject.toml  requirements.lock.txt  requirements.txt
freshrank/admin/: README.md
freshrank/data/metadata/: doc_types.jsonl  esg_tags.jsonl  ingestion_events.jsonl  metadata.jsonl
freshrank/data/parsed/: doc_001.txt  doc_002.txt  doc_003.txt  doc_004.txt  doc_005.txt  doc_006.txt  doc_007.txt  doc_008.txt  doc_009.txt  doc_010.txt  doc_011.txt  doc_012.txt  doc_013.txt  doc_014.txt  doc_015.txt  doc_016.txt  doc_017.txt  (+263 more)
freshrank/docker/: Dockerfile  docker-compose.yml
freshrank/eval/: gold_labels.jsonl  make_regulatory_candidates.py  offline_candidates.json  offline_rerank_output.jsonl  offline_rerank_output.jsonl.off  queries.jsonl  queries_regulatory.jsonl  regulatory_gold.jsonl  topk_candidates_regulatory.jsonl
freshrank/freshrank/: __init__.py
freshrank/regulatory/: __init__.py  rulebook.yaml  taxonomy.yaml  weights.yaml
freshrank/samples/: rerank_request.json  rerank_response.json  tagging_preview.csv  tagging_stats.csv
freshrank/scripts/: build_manifest.py  eval_metrics.py  extract_metadata.py  freeze_config.py  ingestion_slo_report.py  make_final_report.py  rerank_offline.py
freshrank/tests/: test_admin_reload.py  test_date_extractor.py  test_ranker.py  test_regulatory_tagger.py
(+4756 files in other folders)
