[project]
name = "freshrank"
version = "0.1.0"
description = "Recency-aware ranking and regulatory weighting service for insurance corpora"
authors = [{name = "Freshrank Team"}]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
